# obelysk

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  contracts-deploy.yml  deploy.yml  release.yml  security-audit.yml
apps/web/: .env.example  .eslintrc.json  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
contracts/: Scarb.toml  multicall_avnu_swap.toml  multicall_btc_vault_registration.toml  multicall_eth_strk_pool.toml  multicall_sage_strk_pool.toml  multicall_wbtc_strk_pool.toml  sncast.toml  snfoundry.toml
contracts/deployment/: DEPLOYMENT_LOG.md  mainnet-fees-staking-20260301.json  mainnet-remaining-20260227-180134.json  sncast_accounts.json
contracts/scripts/: deploy-mainnet.sh  deploy-remaining-mainnet.sh  redeploy-stealth-registry.sh  register-btc-vault-assets.sh  (+2 more)
docs/: MAINNET_CHECKLIST.md  batch-proving-economics.md  crypto-primitives-m31.md  implementation-plan.md  m31-field-analysis.md  privacy-architecture.md  vm31-vision.md
services/vm31-relayer/: .env.example  .env.mainnet  Cargo.toml  Dockerfile  docker-compose.yml
services/vm31-relayer/nginx/: nginx.conf  setup-tls.sh
services/vm31-relayer/scripts/: generate-keys.sh
services/vm31-relayer/src/: batch_queue.rs  bridge.rs  config.rs  error.rs  main.rs  prover.rs  routes.rs  store.rs  tree_sync_service.rs
(+299 files in other folders)
