[package]
name = "vm31-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-ml = { path = "../../libs/stwo-ml", features = ["server", "audit", "audit-http"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
subtle = "2"
redis = { version = "0.25", features = ["tokio-comp"], optional = true }

[features]
default = []
redis = ["dep:redis"]
